# rag-engine-fastapi

./: README.md  mcp_server.py  pyproject.toml
app/: main.py
app/core/: chunker.py  ocr.py  vector.py
app/modules/document/: route.py
app/modules/search/: route.py
app/modules/upload/: route.py
chroma_db/: chroma.sqlite3
chroma_db/06e04f6a-aa72-46bb-8d70-b4f35145aff8/: index_metadata.pickle
