[project]
name = "assignment-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chonkie[semantic]>=1.6.1",
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "mcp[cli]>=1.27.0",
    "mistralai>=2.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "scalar-fastapi>=1.8.1",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
